
----- cvs ci ------
Wed Jun  16 18:20:00
Fedor:
* change token AutoCreateFile to AutoAreaCreateFile (from link)
+ added token AutoFileCreateFile 
* change token AutoCreateDefaults to AutoAreaCreateDefaults
* moved global AutoFileCreateDefaults to link
  Do it for used htick in future

----- cvs ci ------
Tue Jun  8 20:53:03
Fedor:
+ added token AutoPause for links

fidoconfig 0.8
(released on Mon Jun  7 22:37:09 CEST 1999)
--------------

----- cvs ci ------
Mon Jun  7 20:43:29 CEST 1999
mtt:
* fixed some null-pointer issues.

----- cvs ci ------
Sun May 30 22:26:26 CEST 1999	
mtt:
* fixed a bug in (2)

----- cvs ci ------
Sun May 23  18:50:01
Fedor:
+ added tokens RemoteRobotName - Areafix (default) or another
  and fRequestFromUpLink - link's access for Forward Requests.

----- cvs ci ------
Tue May 18 17:54:01 CEST 1999 
mtt:
* added fconf2squish which can be used for squish config based programs
  like sqLink
* (2) fidoconfig now adds .0 to the pattern of a route when there is no . and no * in it.
	
----- cvs ci ------
Sun May 16 23:26:39 CEST 1999
mtt:
+ fidoInst for new config adapted

----- cvs ci ------
Wed May 12 13:05:10 NOVST 1999
Max:
+ update documentation

----- cvs ci ------
Tue May 11 21:55:03 CEST 1999
mtt:
+ netmailarea can now also be netarea, and if you have $ in your squish area definition, 
  golded may read the fidoconfig file directly. (kolya)
	
fidoconfig 0.7
(released on Wed Apr 21 18:44:22 CEST 1999)
--------------

----- cvs ci ------
Sun Apr 25 21:37:29 CEST 1999
Antonio:
+ Fixed bug in stripComment() if comment line had more than one '#'.
  New stripComment(). Test it please!.
+ Some fixes in tparser.

----- cvs ci ------
Sun Apr 18 20:36:56 CEST 1999
Mtt:
+ fixed wrong Documentation. Please do a make next time.

----- cvs ci ------
Sun Apr 18 15:45:09 NOVST 1999
Max:
+ add separateBundles option

Fri Apr 16 21:27:53 NOVST 1999
Max:
+ update proposal.texi
     
----- cvs ci ------
Wed Apr 14 14:54:14 CEST 1999
mtt: