@@ -1,3 +1,7 @@
+----- cvs ci ------
+Thu Jun 17 12:38:26 NOVST 1999
+max:
++ add tokens defArcmailSize and arcmailSize
 
 ----- cvs ci ------
 Wed Jun  16 18:20:00
